# english-mingle-backend

./: pyproject.toml
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_initial.py
challenges/: admin.py  models.py  serializers.py  urls.py  views.py
challenges/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
classes/: admin.py  models.py
classes/migrations/: 0001_initial.py  0002_alter_class_options.py  0002_initial.py
config/: authentication.py  settings.py  urls.py
events/: admin.py  models.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
levels/: admin.py  models.py  serializers.py  urls.py  views.py
levels/migrations/: 0001_initial.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
messengers/: admin.py  models.py  serializers.py  urls.py  views.py
messengers/migrations/: 0001_initial.py  0002_initial.py
offlines/: admin.py  models.py  serializers.py  urls.py  views.py
offlines/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_offline_options.py
onlineClasses/: admin.py  apps.py  models.py
onlines/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
subjects/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
